skeleton for fetch change endpoint
